--- a/docker-compose/docker-compose-kafka.yml
+++ b/docker-compose/docker-compose-kafka.yml
@@ -97,7 +97,7 @@ services:
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: "1"
       CONNECT_PLUGIN_PATH: '/usr/share/java,/etc/kafka-connect/jars,/usr/share/confluent-hub-components'
     volumes:
-      - ./connectors:/etc/kafka-connect/jars/
+      - ../src/kafka/connectors:/etc/kafka-connect/jars/
     depends_on:
       - zoo1
       - kafka1
