--- a/.github/workflows/ci/black.yml
+++ b/.github/workflows/ci/black.yml
@@ -1,15 +1,12 @@
-name: flake8
+name: black
 
 on:
-  pull_request:
+  push:
     branches:
-      - main
-    types:
-      - opened
-      - synchronize
+      - develop
 
 jobs:
-  linting:
+  auto_format:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8  
+        pip install black  
 
-    - name: Check code formatting and linting
-      run: |
-        flake8
+    - name: Check code formatting with Black
+      run: black --check .
