--- a/.github/workflows/ci/flake8.yml
+++ b/.github/workflows/ci/flake8.yml
@@ -26,6 +26,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8  
 
-    - name: Check code formatting and linting
+    - name: Check code with Flake8
       run: |
         flake8
+        if [ $? -ne 0 ]; then
+          echo "Flake8 check failed. Please fix the issues."
+          exit 1
+        fi
