--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 apache-airflow-providers-apache-kafka
 kafka-python
-python-dotenv
 redis
+apache-airflow-providers-common-sql[pandas]
+apache-airflow-providers-amazon
