--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          masks: True
 
       - name: Build and push image to Amazon ECR
         id: build-image
@@ -41,7 +43,7 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f src/airflow/Dockerfile src/airflow/
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Download task definition for airflow-scheduler
         run: |
@@ -51,10 +53,12 @@ jobs:
         run: |
           jq '.containerDefinitions[0].image = env.ECR_REGISTRY + "/" + env.ECR_REPOSITORY + ":" + env.IMAGE_TAG | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-definition-scheduler.json > modified-task-definition.json
           aws ecs register-task-definition --cli-input-json file://modified-task-definition.json
+          TASK_DEFINITION_ARN=$(aws ecs register-task-definition --cli-input-json file://modified-task-definition.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "taskDefinition.taskDefinitionArn=$TASK_DEFINITION_ARN" >> $GITHUB_ENV
 
       - name: Update service for airflow-scheduler
         run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-scheduler --task-definition ${{ steps.register-task-definition-scheduler.outputs.taskDefinition.taskDefinitionArn }}
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-scheduler --task-definition ${{ env.taskDefinition.taskDefinitionArn }}
 
       - name: Download task definition for airflow-worker
         run: |
