Fix github actions workflows for deploy ecr and ecs
- 각 Airflow 구성 요소(airflow-scheduler, airflow-worker, airflow-web-server)에 대한 작업 정의 업데이트 로직을 개선
- 중복된 작업 정의 등록을 제거하고, 각 작업 정의에 대해 별도의 ARN을 설정하도록 변경

--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -52,13 +52,12 @@ jobs:
       - name: Modify and Register new task definition for airflow-scheduler
         run: |
           jq '.containerDefinitions[0].image = env.ECR_REGISTRY + "/" + env.ECR_REPOSITORY + ":" + env.IMAGE_TAG | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-definition-scheduler.json > modified-task-definition.json
-          aws ecs register-task-definition --cli-input-json file://modified-task-definition.json
           TASK_DEFINITION_ARN=$(aws ecs register-task-definition --cli-input-json file://modified-task-definition.json | jq -r '.taskDefinition.taskDefinitionArn')
-          echo "taskDefinition.taskDefinitionArn=$TASK_DEFINITION_ARN" >> $GITHUB_ENV
+          echo "TASK_DEFINITION_ARN=$TASK_DEFINITION_ARN" >> $GITHUB_ENV
 
       - name: Update service for airflow-scheduler
         run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-scheduler --task-definition ${{ env.taskDefinition.taskDefinitionArn }}
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-scheduler --task-definition ${{ env.TASK_DEFINITION_ARN }}
 
       - name: Download task definition for airflow-worker
         run: |
@@ -67,11 +66,12 @@ jobs:
       - name: Modify and Register new task definition for airflow-worker
         run: |
           jq '.containerDefinitions[0].image = env.ECR_REGISTRY + "/" + env.ECR_REPOSITORY + ":" + env.IMAGE_TAG | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-definition-worker.json > modified-task-definition-worker.json
-          aws ecs register-task-definition --cli-input-json file://modified-task-definition-worker.json
+          TASK_DEFINITION_ARN_WORKER=$(aws ecs register-task-definition --cli-input-json file://modified-task-definition-worker.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "TASK_DEFINITION_ARN_WORKER=$TASK_DEFINITION_ARN_WORKER" >> $GITHUB_ENV
 
       - name: Update service for airflow-worker
         run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-worker --task-definition ${{ steps.register-task-definition-worker.outputs.taskDefinition.taskDefinitionArn }}
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-worker --task-definition ${{ env.TASK_DEFINITION_ARN_WORKER }}
 
       - name: Download task definition for airflow-web-server
         run: |
@@ -80,8 +80,9 @@ jobs:
       - name: Modify and Register new task definition for airflow-web-server
         run: |
           jq '.containerDefinitions[0].image = env.ECR_REGISTRY + "/" + env.ECR_REPOSITORY + ":" + env.IMAGE_TAG | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-definition-web-server.json > modified-task-definition-web-server.json
-          aws ecs register-task-definition --cli-input-json file://modified-task-definition-web-server.json
+          TASK_DEFINITION_ARN_WEB_SERVER=$(aws ecs register-task-definition --cli-input-json file://modified-task-definition-web-server.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "TASK_DEFINITION_ARN_WEB_SERVER=$TASK_DEFINITION_ARN_WEB_SERVER" >> $GITHUB_ENV
 
       - name: Update service for airflow-web-server
         run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-web-server --task-definition ${{ steps.register-task-definition-web-server.outputs.taskDefinition.taskDefinitionArn }}
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-web-server --task-definition ${{ env.TASK_DEFINITION_ARN_WEB_SERVER }}
