Fix ECR registry path to build and push image

--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -10,6 +10,7 @@ on:
 env:
   AWS_REGION: ap-northeast-3
   ECR_REPOSITORY: de-4-2-ecr/airflow
+  ECR_CLUSTER:
   ECS_CLUSTER: ecs-de-4-2
 
 jobs:
@@ -41,9 +42,10 @@ jobs:
           ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f src/airflow/Dockerfile src/airflow/
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+          FULL_IMAGE_NAME="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker build -t $FULL_IMAGE_NAME -f src/airflow/Dockerfile src/airflow/
+          docker push $FULL_IMAGE_NAME
+          echo "image=$FULL_IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Download task definition for airflow-scheduler
         run: |
