Fix slack alert message to deploy ecs and ecr workflow

--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -95,7 +95,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-          SLACK_USERNAME: Deploy ECR & ECS
-          SLACK_COLOR: ${{ job.status == 'success' && 'good' || 'danger' }}
+          SLACK_USERNAME: GitHub CI
+          SLACK_COLOR: ${{ job.status }}
           SLACK_MESSAGE:
-            ${{ job.status == 'success' ? '🎉 ECR/ECS 배포가 성공했습니다! 🎉': '💣 ECR/ECS 배포가 실패했습니다. 💣' } }
+            ${{ job.status == 'success' ? '🎉 ECR/ECS 배포가 성공했습니다! 🎉': '💣 ECR/ECS 배포가 실패했습니다. 💣' }}
