Fix slack alert message to deploy ecs and ecr workflow

--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -89,6 +89,15 @@ jobs:
         run: |
           aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service lulu-airflow-web-server --task-definition ${{ env.TASK_DEFINITION_ARN_WEB_SERVER }}
 
+      - name: Set Slack Message
+        run: |
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "SLACK_MESSAGE=🎉 ECR/ECS 배포가 성공했습니다! 🎉" >> $GITHUB_ENV
+          else
+            echo "SLACK_MESSAGE=💣 ECR/ECS 배포가 실패했습니다. 💣" >> $GITHUB_ENV
+          fi
+        if: always()
+
       - name: Notify Slack
         if: always()
         uses: rtCamp/action-slack-notify@v2
@@ -97,5 +106,4 @@ jobs:
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
           SLACK_USERNAME: GitHub CI
           SLACK_COLOR: ${{ job.status }}
-          SLACK_MESSAGE:
-            ${{ job.status == 'success' ? '🎉 ECR/ECS 배포가 성공했습니다! 🎉': '💣 ECR/ECS 배포가 실패했습니다. 💣' }}
+          SLACK_MESSAGE: ${{ env.SLACK_MESSAGE }}
