Add debug output for troubleshooting EC2_INSTANCE_ID fetching

--- a/.github/workflows/deploy-to-ecr-and-ecs.yml
+++ b/.github/workflows/deploy-to-ecr-and-ecs.yml
@@ -96,7 +96,7 @@ jobs:
         run: |
           TASK_ARN=$(aws ecs list-tasks --cluster ${{ env.ECS_CLUSTER }} --service-name lulu-airflow-web-server --query taskArns[0] --output text) || echo "TASK_ARN failed"
           CONTAINER_INSTANCE=$(aws ecs describe-tasks --cluster ${{ env.ECS_CLUSTER }} --tasks $TASK_ARN --query tasks[0].containerInstanceArn --output text) || echo "CONTAINER_INSTANCE failed"
-          EC2_INSTANCE_ID=$(aws ecs describe-container-instances --cluster ${{ env.ECS_CLUSTER }} --container-instances $CONTAINER_INSTANCE --query containerInstances[0].ec2InstanceId --output text) || echo "EC2_INSTANCE_ID failed"
+          EC2_INSTANCE_ID=$(aws ecs describe-container-instances --cluster ${{ env.ECS_CLUSTER }} --container-instances $CONTAINER_INSTANCE --query 'containerInstances[0].ec2InstanceId' --output text) || echo "EC2_INSTANCE_ID failed"
           echo "EC2_INSTANCE_ID: $EC2_INSTANCE_ID"
           PUBLIC_IP=$(aws ec2 describe-instances --instance-ids $EC2_INSTANCE_ID --query Reservations[0].Instances[0].PublicIpAddress --output text) || echo "PUBLIC_IP failed"
           echo "PUBLIC_IP=$PUBLIC_IP" >> $GITHUB_ENV
