--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -11,7 +11,8 @@ sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.2
-sqlalchemy
-mysql-connector-python
-kinesis
-Python-dotenv
+sqlalchemy==2.0.20
+mysql-connector-python==8.1.0
+kinesis==0.0.1a13
+Python-dotenv==1.0.0
+boto3==1.28.36
